--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Features</a>
+                    <a class="nav-link" href="#shoes">Shoes</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Pricing</a>
+                    <a class="nav-link" href="#backpack">Backpack</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link">Subscribe</a>
+                    <a class="nav-link" href="#subscribe">Subscribe</a>
                   </li>
                 </ul>
               </div>
@@ -124,7 +124,8 @@
             </div>
         </section>
         <section>
-            <h1 class="mb-5">Shoes</h1>
+            <div id="shoes">
+                <h1 class="mb-5">Shoes</h1>
             <div class="row row-cols-1 row-cols-lg-3 row-cols-md-2 g-5">
                 <div class="col">
                   <div class="card h-100 rounded-5 p-4 shadow">
@@ -160,7 +161,9 @@
                   </div>
                 </div>
             </div>
-            <h1 class="my-5">Bags</h1>
+            </div>
+            <div id="backpack">
+                <h1 class="my-5">Bags</h1>
             <div class="row row-cols-1 row-cols-lg-3 row-cols-md-2 g-5">
                 <div class="col">
                   <div class="card h-100 rounded-5 p-4 shadow">
@@ -196,8 +199,9 @@
                   </div>
                 </div>
             </div>
+            </div>
         </section>
-        <section>
+        <section id="subscribe">
             <div class="container">
                 <div class="row bg-info my-5 rounded-3">
                     <div class="col-12">
